# course_work_4

./: README.md  main.py  pyproject.toml
src/classes/: api.py  saver.py  vacancy.py
src/config/: .env-demo  settings.py
src/utils/: functions.py  get_vacancies_example.py
